--- a/NetGrab.csproj
+++ b/NetGrab.csproj
@@ -38,6 +38,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -63,11 +65,12 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Host.cs" />
     <Compile Include="Loaders\_ILoader.cs" />
     <Compile Include="ITaskHost.cs" />
     <Compile Include="Loaders\_AsyncLoaderBase.cs" />
     <Compile Include="Loaders\_SyncLoaderBase.cs" />
-    <Compile Include="Loaders\HkarRuLoader.cs" />
+    <Compile Include="Loaders\HkarRuSyncLoader.cs" />
     <Compile Include="Loaders\KnowyourmemeComLoader.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="NameGen.cs" />
@@ -93,12 +96,17 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="tray.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
