--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -3,10 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="Log" Type="System.String" Scope="User">
-      <Value Profile="(Default)">netgrab.log</Value>
-    </Setting>
-    <Setting Name="LastLoadedFile" Type="System.String" Scope="User">
-      <Value Profile="(Default)">last.load</Value>
+      <Value Profile="(Default)">./netgrab.log</Value>
     </Setting>
     <Setting Name="ThreadCount" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">16</Value>
@@ -16,6 +13,15 @@
     </Setting>
     <Setting Name="FirstDownloadingSuffix" Type="System.String" Scope="User">
       <Value Profile="(Default)">1</Value>
+    </Setting>
+    <Setting Name="UseProxy" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="ProxyLogin" Type="System.String" Scope="User">
+      <Value Profile="(Default)">marchenko.v</Value>
+    </Setting>
+    <Setting Name="ProxyPassword" Type="System.String" Scope="User">
+      <Value Profile="(Default)">vLADEMAR1543</Value>
     </Setting>
   </Settings>
 </SettingsFile>
