--- a/app.config
+++ b/app.config
@@ -11,19 +11,28 @@
                 <value>./netgrab.log</value>
             </setting>
             <setting name="ThreadCount" serializeAs="String">
-                <value>16</value>
+                <value>32</value>
             </setting>
             <setting name="DownloadPath" serializeAs="String">
                 <value>./downloads/</value>
             </setting>
             <setting name="UseProxy" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="ProxyLogin" serializeAs="String">
-                <value>marchenko.v</value>
+                <value />
             </setting>
             <setting name="ProxyPassword" serializeAs="String">
-                <value>vLADEMAR1543</value>
+                <value />
+            </setting>
+            <setting name="FaultLog" serializeAs="String">
+                <value>./netgrabFault.log</value>
+            </setting>
+            <setting name="LastStateFile" serializeAs="String">
+                <value>./last.state</value>
+            </setting>
+            <setting name="AutoResume" serializeAs="String">
+                <value>True</value>
             </setting>
         </NetGrab.Properties.Settings>
     </userSettings>
