--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -6,19 +6,28 @@
       <Value Profile="(Default)">./netgrab.log</Value>
     </Setting>
     <Setting Name="ThreadCount" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">16</Value>
+      <Value Profile="(Default)">32</Value>
     </Setting>
     <Setting Name="DownloadPath" Type="System.String" Scope="User">
       <Value Profile="(Default)">./downloads/</Value>
     </Setting>
     <Setting Name="UseProxy" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="ProxyLogin" Type="System.String" Scope="User">
-      <Value Profile="(Default)">marchenko.v</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="ProxyPassword" Type="System.String" Scope="User">
-      <Value Profile="(Default)">vLADEMAR1543</Value>
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="FaultLog" Type="System.String" Scope="User">
+      <Value Profile="(Default)">./netgrabFault.log</Value>
+    </Setting>
+    <Setting Name="LastStateFile" Type="System.String" Scope="User">
+      <Value Profile="(Default)">./last.state</Value>
+    </Setting>
+    <Setting Name="AutoResume" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
     </Setting>
   </Settings>
 </SettingsFile>
