--- a/NetGrab.csproj
+++ b/NetGrab.csproj
@@ -66,8 +66,11 @@
     </Page>
     <Compile Include="1.Interfaces\IStateTracker.cs" />
     <Compile Include="2.Base\AsyncLoaderModes.cs" />
+    <Compile Include="2.Base\Events.cs" />
+    <Compile Include="1.Interfaces\ISpeedTest.cs" />
     <Compile Include="2.Base\NotifyingObject.cs" />
     <Compile Include="2.Base\ObservableCollectionEx.cs" />
+    <Compile Include="2.Base\SpeedTest.cs" />
     <Compile Include="2.Base\TimerManager.cs" />
     <Compile Include="3.Loaders\KnowyourmemeCom\KnowyourmemeComLoaderTaskGroup.cs" />
     <Compile Include="App.xaml.cs">
