--- a/app.config
+++ b/app.config
@@ -8,13 +8,13 @@
     <userSettings>
         <NetGrab.Properties.Settings>
             <setting name="Log" serializeAs="String">
-                <value>./netgrab.log</value>
+                <value>e:\NetGrab\netgrab.log</value>
             </setting>
             <setting name="ThreadCount" serializeAs="String">
                 <value>32</value>
             </setting>
             <setting name="DownloadPath" serializeAs="String">
-                <value>./downloads/</value>
+                <value>e:\NetGrab\downloads\</value>
             </setting>
             <setting name="UseProxy" serializeAs="String">
                 <value>False</value>
@@ -26,10 +26,10 @@
                 <value />
             </setting>
             <setting name="FaultLog" serializeAs="String">
-                <value>./netgrabFault.log</value>
+                <value>e:\NetGrab\netgrabFault.log</value>
             </setting>
             <setting name="LastStateFile" serializeAs="String">
-                <value>./last.state</value>
+                <value>e:\NetGrab\last.state</value>
             </setting>
             <setting name="AutoResume" serializeAs="String">
                 <value>True</value>
