--- a/NetGrab.csproj
+++ b/NetGrab.csproj
@@ -60,6 +60,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="TOR\Socks5Proxy.cs" />
+    <Compile Include="TOR\TcpListenerIOState.cs" />
+    <Compile Include="TOR\SocketRelay.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
