--- a/app.config
+++ b/app.config
@@ -8,16 +8,16 @@
     <userSettings>
         <NetGrab.Properties.Settings>
             <setting name="Log" serializeAs="String">
-                <value>e:\NetGrab\netgrab.log</value>
+                <value>.\netgrab.log</value>
             </setting>
             <setting name="ThreadCount" serializeAs="String">
-                <value>32</value>
+                <value>1</value>
             </setting>
             <setting name="DownloadPath" serializeAs="String">
-                <value>e:\NetGrab\downloads\</value>
+                <value>.\downloads\</value>
             </setting>
             <setting name="UseProxy" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="ProxyLogin" serializeAs="String">
                 <value />
@@ -26,13 +26,16 @@
                 <value />
             </setting>
             <setting name="FaultLog" serializeAs="String">
-                <value>e:\NetGrab\netgrabFault.log</value>
+                <value>.\netgrabFault.log</value>
             </setting>
             <setting name="LastStateFile" serializeAs="String">
-                <value>e:\NetGrab\last.state</value>
+                <value>.\last.state</value>
             </setting>
             <setting name="AutoResume" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="Proxy" serializeAs="String">
+                <value>127.0.0.1:9999</value>
             </setting>
         </NetGrab.Properties.Settings>
     </userSettings>
