--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -3,16 +3,16 @@
   <Profiles />
   <Settings>
     <Setting Name="Log" Type="System.String" Scope="User">
-      <Value Profile="(Default)">e:\NetGrab\netgrab.log</Value>
+      <Value Profile="(Default)">.\netgrab.log</Value>
     </Setting>
     <Setting Name="ThreadCount" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)">32</Value>
+      <Value Profile="(Default)">1</Value>
     </Setting>
     <Setting Name="DownloadPath" Type="System.String" Scope="User">
-      <Value Profile="(Default)">e:\NetGrab\downloads\</Value>
+      <Value Profile="(Default)">.\downloads\</Value>
     </Setting>
     <Setting Name="UseProxy" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="ProxyLogin" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
@@ -21,13 +21,16 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="FaultLog" Type="System.String" Scope="User">
-      <Value Profile="(Default)">e:\NetGrab\netgrabFault.log</Value>
+      <Value Profile="(Default)">.\netgrabFault.log</Value>
     </Setting>
     <Setting Name="LastStateFile" Type="System.String" Scope="User">
-      <Value Profile="(Default)">e:\NetGrab\last.state</Value>
+      <Value Profile="(Default)">.\last.state</Value>
     </Setting>
     <Setting Name="AutoResume" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="Proxy" Type="System.String" Scope="User">
+      <Value Profile="(Default)">127.0.0.1:9999</Value>
     </Setting>
   </Settings>
 </SettingsFile>
